<resources>
    <string name="app_name" translatable="false">Weathery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="alarms">Alarms</string>
    <string name="Location">Location</string>
    <string name="where_are_you_going">where are you going?</string>
    <string name="TemperatureWindspeed"><![CDATA[Temperature & Wind Speed]]></string>
    <string name="imperical">Temperature in Ferinheit and wind speed in miles/hour</string>
    <string name="metric">Temperature in celesius and wind speed in meters/sec</string>
    <string name="standard">Temperature in Kelvin and Wind speed in meter/sec</string>
    <string name="Language">Language</string>
    <string name="english">english</string>
    <string name="arabic">arabic</string>
    <string name="choose">Choose your Settings</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="done">Done</string>
    <string name="time">Time</string>
    <string name="describtion">describtion</string>
    <string name="weather">Weather</string>
</resources>