<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".alarm.view.SetAlarmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cvcurrentItem"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:cardCornerRadius="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    android:text="@string/startDate"
                  app:layout_constraintEnd_toStartOf="@+id/tvEndDate"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/tvEndDate"
                   app:layout_constraintStart_toEndOf="@+id/tvStartDate"
                   android:text="@string/endDate"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toTopOf="@id/tvLocation"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                   app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Location"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/doneButton"
                    app:layout_constraintEnd_toStartOf="@+id/tvTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvStartDate" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/doneButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvLocation"
                    app:layout_constraintTop_toBottomOf="@id/tvEndDate"
                    app:layout_constraintVertical_bias="0.38" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/doneButton"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingStart="70dp"
                    android:paddingEnd="70dp"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>